--- a/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Account/Register.cshtml
+++ b/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Account/Register.cshtml
@@ -5,7 +5,9 @@
 
 }
 <br />
+<style>
 
+</style>
 
 <script src="~/Scripts/jquery-3.4.1.slim.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
@@ -21,109 +23,106 @@
                 text: "You are registered successfully , but you need to check your Email",
                 icon: "success",
                 type: "success"
-});
+            });
         })
     });
 </script>
 @*<input type="button" value="batool" name="batool" id="btnBatool" />*@
+<h4 style="color: #51be78">Register in the university now.</h4>
+<hr />
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    <div class="container">
-        @Html.AntiForgeryToken()
-        <h4 style="color: #51be78">Register in the university now.</h4>
-        <hr />
+    <div style="margin-left:22px ;width:70%">
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+                @Html.AntiForgeryToken()
 
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.Label("Full Name", new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBox("fname", "", new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.Label("GPA", new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBox("GPA", "", new { @class = "form-control" })
-            </div>
-        </div>
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
+                </div>
 
 
-        <div class="form-group">
-            @Html.Label("Year of Study", new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBox("Y_O_Study", "", new { @class = "form-control" })
-            </div>
-        </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Label("Full Name", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBox("fname", "", new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Label("Highschool Avg", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBox("GPA", "", new { @class = "form-control" })
+                    </div>
+                </div>
 
 
-        <div class="form-group">
-            @Html.Label("National Number", new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBox("SSN", "", new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.Label("Phone Number", new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBox("phone", "", new { @class = "form-control" })
-            </div>
-        </div>
+                <div class="form-group">
+                    @Html.Label("Admission Year", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBox("Y_O_Study", "", new { @class = "form-control" })
+                    </div>
+                </div>
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model, "Faculity", htmlAttributes: new { @class = "control-label col-md-2" })
-            @Html.Action("drop")
+                <div class="form-group">
+                    @Html.Label("National Number", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBox("SSN", "", new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Label("Phone Number", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBox("phone", "", new { @class = "form-control" })
+                    </div>
+                </div>
 
 
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model, "Photo", htmlAttributes: new { @class = "control-label col-md-2" })
-            <input type="file" id="image" name="UserImage" value="UserImage" required />
+                <div class="form-group">
+                    @Html.LabelFor(model => model, "Faculity", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Action("drop")
 
 
-        </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model, "Certificate", htmlAttributes: new { @class = "control-label col-md-2" })
-            <input type="file" id="Tawjihi_Image" name="Tawjihi_Image" value="Tawjihi_Image" required />
+                <div class="form-group">
+                    @Html.LabelFor(model => model, "Photo", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <input type="file" id="image" name="UserImage" value="UserImage" required />
 
 
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Register" style="background-color: #51be78" id="btnBatool" />
-            </div>
-        </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model, "Certification", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <input type="file" id="Tawjihi_Image" name="Tawjihi_Image" value="Tawjihi_Image" required />
+
+
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" class="btn btn-default" value="Register" style="background-color: #51be78" id="btnBatool" />
+                    </div>
+                </div>
+
+
+
+
+
+
+        }
     </div>
-
-
-
-
-
-
-
-}
-
-
