--- a/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Home/HtmlPage1.html
+++ b/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Home/HtmlPage1.html
@@ -6,7 +6,7 @@
 <div class="container-fluid" style="position:relative">
     <div class="content">
         <video src="https://www.yu.edu.jo/images/video/yuWeb.mp4" type="video/mp4" muted autoplay loop style=" width: 100vw;
-  height: 75vh;
+  height: 80vh;
   object-fit: cover; position:relative;
     z-index:0;"> </video>
 
@@ -36,7 +36,7 @@
         <div class="row mb-5 justify-content-center text-center">
             <div class="col-lg-4 mb-5">
                 <h2 class="section-title-underline mb-5">
-                    <span>Why Academics Works</span>
+                    <span>The thing that distinguishes us</span>
                 </h2>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="feature-1-content">
                         <h2>Personalize Learning</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
+                        <p>We depending on Online Learning More and More</p>
                         <p><a href="#" class="btn btn-primary px-4 rounded-0">Learn More</a></p>
                     </div>
                 </div>
@@ -60,8 +60,8 @@
                         <span class="flaticon-school-material text-white"></span>
                     </div>
                     <div class="feature-1-content">
-                        <h2>Trusted Courses</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
+                        <h2>Transportation Insurance</h2>
+                        <p> We offer Transportation  , To gain your Trusted </p>
                         <p><a href="#" class="btn btn-primary px-4 rounded-0">Learn More</a></p>
                     </div>
                 </div>
@@ -72,8 +72,8 @@
                         <span class="flaticon-library text-white"></span>
                     </div>
                     <div class="feature-1-content">
-                        <h2>Tools for Students</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
+                        <h2>appropriate laboratories</h2>
+                        <p>We offer Laboratories , to  offer technical students to the Society.</p>
                         <p><a href="#" class="btn btn-primary px-4 rounded-0">Learn More</a></p>
                     </div>
                 </div>
