--- a/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Shared/_navAndFooter.cshtml
+++ b/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Shared/_navAndFooter.cshtml
@@ -53,7 +53,7 @@
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="site-logo">
                         <a href="index.html" class="d-block">
-                            <img src="..\\image\\logo.png" alt="Image" width="100" height="80">
+                            <img src="~/academics-master/images/logo.png" alt="Image" width="100" height="80">
                         </a>
                     </div>
                     <div class="ml-auto"   >
@@ -133,7 +133,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
-                        <p class="mb-4"><img src="..\\image\\logo.png" alt="Image" style="width:150px ; height:100px"></p>
+                        <p class="mb-4"><img src="~/academics-master/images/logo.png" alt="Image" style="width:150px ; height:100px"></p>
                         <p style="color: #51be78">Developing competencies in various fields of science and knowledge through providing distinguished education and producing of innovative scientific research that serves the community and contributes to building a knowledge economy by creating a university environment that stimulates creativity, through freedom of expression and responding to the demands of society and scientific development..</p>
                         <p><a href="#">Learn More</a></p>
                     </div>
