--- a/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Home/HtmlPage1.html
+++ b/Project_8_MVC_Batool/Project_8_MVC_Batool/Views/Home/HtmlPage1.html
@@ -3,12 +3,12 @@
 <script src="../../academics-master/js/main.js"></script>
 <link href="../../academics-master/css/style.css" rel="stylesheet" />
 
-<div class="container-fluid" style="position:relative">
+<div class="container" style="position:relative">
     <div class="content">
         <video src="https://www.yu.edu.jo/images/video/yuWeb.mp4" type="video/mp4" muted autoplay loop style=" width: 100vw;
   height: 80vh;
   object-fit: cover; position:relative;
-    z-index:0;"> </video>
+    z-index:0;margin-left:-20%"> </video>
 
         <div class="overlay" style="position:absolute;
                      top:30%;
@@ -16,7 +16,7 @@
                      z-index:1;">
 
 
-            <a href="/Account/Login">    <img src="https://www.yu.edu.jo/images/adminsis-logo.png" style="width: 150px; height: 150px; border-radius: 12px; margin-top: 60%; margin-left: 40px; margin-top: 160px " /> </a>
+            <a href="/Account/Login">    <img src="https://www.yu.edu.jo/images/adminsis-logo.png" style="width: 150px; height: 150px; border-radius: 12px; margin-top: 60%; margin-left: 0px; margin-top: 160px " /> </a>
             <a href="/Account/Login">    <img src="https://www.yu.edu.jo/images/moodle-logo.png" style="width: 150px; height: 150px; border-radius: 12px; margin-top:180px ; margin-left:60px" /> </a>
             <a href="/Home/contactUS">    <img src="https://www.yu.edu.jo/images/email-logo.png" style="width: 150px; height: 150px; border-radius: 12px; margin-top: 180px; margin-left: 60px" /> </a>
             <a href="https://www.yu.edu.jo/images/docs/University_Calendar_for_the_Academic_Year_2023.pdf">    <img src="https://www.yu.edu.jo/images/calendar-logo.png" style="width: 150px; height: 150px; border-radius: 12px; margin-top: 180px; margin-left: 60px" /> </a>
